--- a/templates/list.html
+++ b/templates/list.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Book List</h1>
     <ul>
         {% for object in objects %}
             <li>{{ object.title }}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
