--- a/frontend/src/components/searchBar/SearchResult.css
+++ b/frontend/src/components/searchBar/SearchResult.css
@@ -1,7 +1,39 @@
+/*.search-result {*/
+/*  padding: 10px 20px;*/
+/*  color: black;*/
+/*}*/
 .search-result {
-  padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px;
+    /*border: 1px solid #ddd;*/
+    border-bottom: 1px solid black; /* Add border-bottom for the line */
+    margin: 0px;
+    text-decoration: none;
+    color: #333;
 }
 
+.result-label {
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.result-content {
+    flex-grow: 1;
+}
+
+.result-thumbnail {
+    width: 40px;
+    height: 50px;
+    border: 1px solid black;
+    margin-left: 10px;
+    object-fit: cover;
+}
+
+
 .search-result:hover {
-  background-color: #efefef;
+    background-color: #660000;
+    color: white;
+
 }
