--- a/frontend/src/components/searchBar/SearchResultsList.css
+++ b/frontend/src/components/searchBar/SearchResultsList.css
@@ -1,12 +1,33 @@
 .results-list {
-  width: 100%;
+    width: 100%;
     color: black;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0px 0px 8px #ddd;
-  border-radius: 10px;
-  margin-top: 1rem;
-  max-height: 300px;
-  overflow-y: auto;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 8px #ddd;
+    border-radius: 10px;
+        border: 1px solid black;
+    margin-top: 1rem;
+    max-height: 300px;
+    overflow-y: auto;
 }
+
+.no-results {
+    width: 100%;
+    color: black;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 20px #ddd;
+    border-radius: 10px;
+    margin-top: 1rem;
+    max-height: 300px;
+    overflow-y: auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px;
+    /*border: 1px solid #ddd;*/
+    border: 1px solid black; /* Add border-bottom for the line */
+    text-decoration: none;
+}
+
