--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,69 +1,86 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    color-scheme: light dark;
+    color: black;
+    background-color: white;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /*background-image: none;*/
+    /*z-index: 100;*/
+}
 
-  color-scheme: light dark;
-  color: black;
-  /*background-color: #242424;*/
-  background-color: white;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*body, html {*/
+/*    margin-top: 10%;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+
+/*    !*place-items: center;*!*/
+/*    !*min-width: 320px;*!*/
+/*    !*min-height: 100vh;*!*/
+/*    !*align-items: center;*!*/
+/*    padding: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background: url("./assets/29660.jpg") no-repeat center center fixed;*/
+/*    background-size: cover;*/
+/*}*/
+
+body {
+    margin-top: 4%;
+    display: flex;
+    justify-content: center;
+
+    /*place-items: center;*/
+    /*min-width: 320px;*/
+    /*min-height: 100vh;*/
+    /*align-items: center;*/
+    padding: 0;
+    /*width: 100%;*/
+    height: 100%;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+h1 {
+    margin-top: 0;
+}
+h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+h4{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+button {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #660000; /* Your garnet color */
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+
+button:hover {
+    border-color: white;
+    background-color: #4B0000;
+    transition: background-color 0.55s;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    text-decoration: none;
+    color: inherit;
 }
+
 a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    text-decoration: underline;
 }
